--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ textarea:focus-visible {
   padding: 1.9rem; /* we override the main container padding property  */
 }
 .section-navbar img {
-height: 40px;   
+/* height: 40px;    */
   width: 25%;    
   display: block;
 }
